Deal with invalid .kml files.

BUG: 281933